--- a/Testkitchen1607/Podfile
+++ b/Testkitchen1607/Podfile
@@ -1,4 +1,4 @@
-   3333333source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 use_frameworks!
 
@@ -7,5 +7,8 @@ target 'Testkitchen1607' do
     pod 'Kingfisher','~>2.6'
     pod 'MJRefresh'
     pod 'SnapKit','~>0.22.0'
+    pod 'SwiftyJSON'
+    pod 'XWSwiftRefresh', '~> 0.1.9'
+   
 end
 
